# py

./: .gitignore  CMakeLists.txt  Makefile  Makefile.pdlibbuilder  README.md  build-lnx-pd-gcc.sh  build-mac-pd-gcc.sh  build-pd-cygwin.sh  build-pd-darwin.sh  build-pd-linux.sh  build-win-max-msvc.bat  build-win-pd-msvc.bat  config-lnx-gcc.txt  config-mac-gcc.txt  config-pd-bcc.txt  config-pd-cygwin.txt  config-pd-darwin.txt  config-pd-linux.txt  config-pd-msvc.txt  config-win-max-msvc.txt  config-win-msvc.txt  config-win-pd-msvc.txt  license.txt  make-files.txt  makefile-lnx-gcc.txt  makefile-mac-gcc.txt  makefile-win-msvc.txt  makefile.bcc  makefile.pd-bcc  makefile.pd-cygwin  makefile.pd-darwin  makefile.pd-linux  makefile.pd-msvc  package.txt  py  py.cw  py.dsp  py.mpw  py.vcproj  readme.txt  (+1 more)
maxmsp/: py-objectmappings.txt  py.maxhelp  thread-1.mxb
pd/: attr-1.pd  buffer-1.pd  builtins-1.pd  methods-1.pd  methods-2.pd  pak.pd  script-1.pd  sendrecv-1.pd  sendrecv-2.pd  sendrecv-3.pd  sig-1.pd  sig-2.pd  simple-1.pd  simple-2.pd  simple-3.pd  tcltk.pd  test.pd  thread-1.pd
py.xcode/: project.pbxproj
py.xcodeproj/: project.pbxproj
scripts/: buffer.py  ext1.py  pak.py  scr1.py  scr2.py  script.py  sendrecv.py  sig.py  simple.py  tcltk.py  threading.py  threads.py
source/: bound.cpp  clmeth.cpp  main.cpp  main.h  modmeth.cpp  py.cpp  pyargs.cpp  pyatom.cpp  pyatom.h  pybase.cpp  pybase.h  pybuf.cpp  pybuffer.cpp  pybuffer.h  pybundle.cpp  pybundle.h  pycompat.cpp  pycompat.h  pydsp.cpp  pyext.cpp  pyext.h  pymeth.cpp  pyprefix.h  pysymbol.cpp  pysymbol.h  register.cpp  thrctrl.h
